# local_summarizer

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION.md  LICENSE  PRD.md  README.md  pyproject.toml  tunnel.sh
.claude/: settings.json
.claude/commands/: commit-git.md  create-prd.md  documentation-update.md
.claude/skills/code_review/references/: best_practices.md  common_antipatterns.md  security_checklist.md
.claude/skills/grill-me/: SKILL.md
.claude/skills/restart-app/: SKILL.md
.claude/skills/restart-app/scripts/: restart_app.sh
.streamlit/: config.toml
docs/: agent.md  architecture.md  export.md  ingestion.md  models.md  portfolio.md  templates.md  testing.md  ui.md
src/: agent.py  app.py  auth.py  config.py  export.py  extract.py  i18n.py  language.py  md_convert.py  models.py  ollama_client.py  portfolio.py  prices.py  prompts.py  templates.py  theme.py  tools.py
tests/: conftest.py  test_agent.py  test_app.py  test_auth.py  test_config.py  test_export.py  test_extract.py  test_i18n.py  test_language.py  test_md_convert.py  test_models.py  test_portfolio.py  test_prices.py  test_prompts.py  test_templates.py  test_theme.py
