[project]
name = "local-summarizer"
version = "0.1.0"
description = "Local, offline document summarizer (Streamlit + LangGraph + Ollama)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "streamlit>=1.36",
    "langgraph>=0.2",
    "langchain-ollama>=0.2",
    "ollama>=0.3",
    "python-dotenv>=1.0",
    "langdetect>=1.0.9",
    "pypdfium2>=4.0",
    "pillow>=10.0",
    "python-docx>=1.1",
    "markdown>=3.6",
    "fpdf2>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
